@@ -1,0 +1,35 @@
+// compression.cs
+//
+//  Copyright (C) 2008 Dieter Lunn
+//
+// This library is free software; you can redistribute it and/or
+// modify it under the terms of the GNU Lesser General Public
+// License as published by the Free Software Foundation; either
+// version 3.0 of the License, or (at your option) any later version.
+//
+// This library is distributed in the hope that it will be useful,
+// but WITHOUT ANY WARRANTY; without even the implied warranty of
+// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
+// Lesser General Public License for more details.
+//
+// You should have received a copy of the GNU Lesser General Public
+// License along with this library; if not, write to the Free Software
+// Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA 
+//
+//
+
+using System.Xml;
+using xmpp.common;
+using xmpp.attributes;
+
+namespace xmpp.core.compression
+{
+	[XmppTag("", Namespaces.COMPRESSION, typeof(Compression))]
+	public class Compression : xmpp.common.Tag
+	{
+		public Compression(string prefix, XmlQualifiedName qname, XmlDocument doc)
+			: base (prefix, qname, doc)
+		{
+		}
+	}
+}
