@@ -13,9 +13,8 @@
 //with this library; if not, write to the Free Software Foundation, Inc., 59
 //Temple Place, Suite 330, Boston, MA 02111-1307 USA
 
-using System;
 using System.Xml;
-using xmpp;
+using xmpp.attributes;
 using xmpp.common;
 
 namespace xmpp.core.SASL
