@@ -14,6 +14,7 @@
 using System.Text;
 using System.Xml;
 using xmpp.common;
+using xmpp.attributes;
 
 namespace xmpp.core
 {
