@@ -1,3 +1,8 @@
+2008-06-16  Dieter Lunn <coder2000@gmail.com> 
+
+	* Moved XmppTagAttribute to xmpp.attributes namespace allowing for further attributes to be added.
+	* Started work on XEP-0138 Stream Compression
+
 2008-06-05  Dieter Lunn <coder2000@gmail.com> 
 
 	* net/AsyncSocket.cs: Updated the file for Mono 2.0 which supports SslStream
